--- a/AugmentedReality/.cproject
+++ b/AugmentedReality/.cproject
@@ -3,7 +3,13 @@
 	<storageModule moduleId="org.eclipse.cdt.core.settings">
 		<cconfiguration id="com.android.toolchain.gcc.1887952359">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="com.android.toolchain.gcc.1887952359" moduleId="org.eclipse.cdt.core.settings" name="Default">
-				<externalSettings/>
+				<macros>
+					<stringMacro name="OPENCVROOT" type="VALUE_TEXT" value="D:\Development\OpenCVAndroid\"/>
+					<stringMacro name="NDKROOT" type="VALUE_TEXT" value="D:\Development\android-ndk"/>
+				</macros>
+				<externalSettings>
+					<externalSetting/>
+				</externalSettings>
 				<extensions>
 					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 					<extension id="org.eclipse.cdt.core.VCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
@@ -20,13 +26,21 @@
 					<folderInfo id="com.android.toolchain.gcc.1887952359.369989512" name="/" resourcePath="">
 						<toolChain id="com.android.toolchain.gcc.764410092" name="com.android.toolchain.gcc" superClass="com.android.toolchain.gcc">
 							<targetPlatform binaryParser="org.eclipse.cdt.core.ELF" id="com.android.targetPlatform.1989281739" isAbstract="false" superClass="com.android.targetPlatform"/>
-							<builder id="com.android.builder.1869318235" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder">
+							<builder arguments="" buildPath="${workspace_loc:/AugmentedReality/Default}" command="ndk-build" id="com.android.builder.1869318235" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder">
 								<outputEntries>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="obj"/>
 									<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="libs"/>
 								</outputEntries>
 							</builder>
 							<tool id="com.android.gcc.compiler.1789110038" name="Android GCC Compiler" superClass="com.android.gcc.compiler">
+								<option id="com.android.gcc.option.includePath.505509343" superClass="com.android.gcc.option.includePath" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${OPENCVROOT}\sdk\native\jni\include\&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${NDKROOT}\sources\cxx-stl\gnu-libstdc++\libs\armeabi-v7a\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${NDKROOT}\sources\cxx-stl\gnu-libstdc++\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${NDKROOT}\platforms\android-9\arch-arm\usr\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${NDKROOT}\sources\cxx-stl\gnu-libstdc++\4.6\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;D:\Development\android-ndk\sources\cxx-stl\gnu-libstdc++\4.6&quot;"/>
+								</option>
 								<inputType id="com.android.gcc.inputType.213652851" superClass="com.android.gcc.inputType"/>
 							</tool>
 						</toolChain>
@@ -48,4 +62,8 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="com.android.AndroidPerProjectProfile"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="refreshScope" versionNumber="1">
+		<resource resourceType="PROJECT" workspacePath="/AugmentedReality"/>
+	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
