--- a/AugmentedReality/bin/AndroidManifest.xml
+++ b/AugmentedReality/bin/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.augmentedreality"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <support-screens 
+        android:resizeable="true"
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:anyDensity="true" />
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -15,7 +21,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.augmentedreality.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboardHidden|orientation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,5 +31,9 @@
             </intent-filter>
         </activity>
     </application>
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
 </manifest>
