--- a/AugmentedReality/bin/AndroidManifest.xml
+++ b/AugmentedReality/bin/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.augmentedreality"
+<manifest package="com.augmentedreality"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     
     <support-screens 
         android:resizeable="true"
