--- a/AugmentedReality/AndroidManifest.xml
+++ b/AugmentedReality/AndroidManifest.xml
@@ -7,17 +7,25 @@
         android:resizeable="true"
         android:smallScreens="true"
         android:normalScreens="true"
+        android:largeScreens="true"
         android:anyDensity="true" />
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="16" />
+        android:targetSdkVersion="16"
+        android:maxSdkVersion="16" />
+    
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name="com.augmentedreality.MainActivity"
             android:label="@string/app_name"
@@ -31,8 +39,6 @@
         </activity>
     </application>
     
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
+   
 
 </manifest>
