--- a/AugmentedReality/AndroidManifest.xml
+++ b/AugmentedReality/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <uses-feature android:name="android.hardware.camera.front" android:required="false" />
     <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false" />
+    <uses-feature android:glEsVersion="0x00020000" />
 
     <application
         android:allowBackup="true"
